--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,11 @@ services:
       - '/app/node_modules'
     ports:
       - 8080:8080
+
+  mongodb:
+    image: mongo:latest
+    volumes:
+      - mongodb_data:/data/db
+      
+volumes:
+  mongodb_data:
