--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "primeicons": "^6.0.1",
     "primevue": "^3.37.0",
     "router": "^1.3.8",
     "vue": "^3.2.13",
